добавил  modern-normalize.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
+		<link rel="stylesheet" href="./css/modern-normalize.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body class="page">
@@ -31,7 +31,7 @@
 		</header>
 		<!-- Портфолио -->
 		<main>
-			<section>
+			<section class="portfolio">
 				<h1 class="hidden-title">Портфолио</h1>
 				<!-- Фильтры -->
 				<ul class="list btn-list">
