--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,14 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"/>
-		<link rel="stylesheet" href="./css/modern-normalize.css" />
+		<!--<link rel="stylesheet" href="./css/modern-normalize.css" />-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body class="page">
 		<!-- Верхняя линия -->
-		<header class="header">
+		<div class="container">
+			<header class="header">
 			<nav>
 				<a href="./index.html" class="link logo">Web<span class="logo-black">Studio</span></a>
 				<ul class="list site-nav-list">
@@ -29,9 +31,11 @@
 				<li><a href="tel:+380961111111" class="link contact-list">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
+		</div>
 		<!-- Портфолио -->
 		<main>
-			<section class="portfolio">
+			<div class="container">
+				<section class="section portfolio">
 				<h1 class="hidden-title">Портфолио</h1>
 				<!-- Фильтры -->
 				<ul class="list btn-list">
@@ -90,9 +94,12 @@
 					</li>
 				</ul>
 			</section>
+			</div>
+			
 		</main>
 		<!-- Подвал -->
-		<footer class="footer">
+		<div class="container">
+			<footer class="footer">
 			<a href="./index.html" class="link logo">Web<span class="logo-white">Studio</span></a>
 			<address class="adress">
 				<ul class="list contact-footer" id="contacts">
@@ -103,5 +110,7 @@
 				</ul>
 			</address>
 		</footer>
+		</div>
+		
 	</body>
 </html>
