--- a/portfolio.html
+++ b/portfolio.html
@@ -16,90 +16,89 @@
 	</head>
 	<body class="page">
 		<!-- Верхняя линия -->
-		<div class="container">
 			<header class="header">
-			<nav>
+				<div class="container nav">
+			<nav class="main-nav">
 				<a href="./index.html" class="link logo">Web<span class="logo-black">Studio</span></a>
 				<ul class="list site-nav-list">
-					<li><a href="./index.html" class="link">Студия</a></li>
-					<li><a href="./portfolio.html" class="active-page link">Портфолио</a></li>
-					<li><a href="#contacts" class="link">Контакты</a></li>
+					<li class="item"><a href="./index.html" class="link">Студия</a></li>
+					<li class="item"><a href="./portfolio.html" class="active-page link">Портфолио</a></li>
+					<li class="item"><a href="#contacts" class="link">Контакты</a></li>
 				</ul>
 			</nav>
 			<ul class="list contacts">
-				<li><a href="mailto:info@devstudio.com" class="link contact-list">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111" class="link contact-list">+38 096 111 11 11</a></li>
+				<li class="item"><a href="mailto:info@devstudio.com" class="link contact-list">info@devstudio.com</a></li>
+				<li class="item"><a href="tel:+380961111111" class="link contact-list">+38 096 111 11 11</a></li>
 			</ul>
+			</div>
 		</header>
-		</div>
 		<!-- Портфолио -->
 		<main>
-			<div class="container">
 				<section class="section portfolio">
+					<div class="container">
 				<h1 class="hidden-title">Портфолио</h1>
 				<!-- Фильтры -->
 				<ul class="list btn-list">
-					<li><button type="button" class="filter-button">Все</button></li>
-					<li><button type="button" class="filter-button">Веб-сайты</button></li>
-					<li><button type="button" class="filter-button">Приложения</button></li>
-					<li><button type="button" class="filter-button">Дизайн</button></li>
-					<li><button type="button" class="filter-button">Маркетинг</button></li>
+					<li class="item"><button type="button" class="filter-button">Все</button></li>
+					<li class="item"><button type="button" class="filter-button">Веб-сайты</button></li>
+					<li class="item"><button type="button" class="filter-button">Приложения</button></li>
+					<li class="item"><button type="button" class="filter-button">Дизайн</button></li>
+					<li class="item"><button type="button" class="filter-button">Маркетинг</button></li>
 				</ul>
 				<!-- Проекты -->
 				<ul class="list portfolio-list">
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-01.jpg" alt="Технокряк" width="370" height="294" />
 						<h2 class="portfolio-title">Технокряк</h2>
 						<p class="portfolio-text">Веб-сайт</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-02.jpg" alt="Постер" width="370" height="294" /></a>
 						<h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
 						<p class="portfolio-text">Дизайн</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-03.jpg" alt="Ресторан" width="370" height="294" />
 						<h2 class="portfolio-title">Ресторан Seafood</h2>
 						<p class="portfolio-text">Приложение</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-04.jpg" alt="Прайм" width="370" height="294" />
 						<h2 class="portfolio-title">Проект Prime</h2>
 						<p class="portfolio-text">Маркетинг</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-05.jpg" alt="Боксы" width="370" height="294" />
 						<h2 class="portfolio-title">Проект Boxes</h2>
 						<p class="portfolio-text">Приложение</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-06.jpg" alt="Нет границ" width="370" height="294" />
 						<h2 class="portfolio-title">Inspiration has no Borders</h2>
 						<p class="portfolio-text">Веб-сайт</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-07.jpg" alt="Лимитед" width="370" height="294" />
 						<h2 class="portfolio-title">Издание Limited Edition</h2>
 						<p class="portfolio-text">Дизайн</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-08.jpg" alt="Лаб" width="370" height="294" />
 						<h2 class="portfolio-title">Проект LAB</h2>
 						<p class="portfolio-text">Маркетинг</p></a>
 					</li>
-					<li>
+					<li class="cards">
 						<a href="" class="link"><img src="./images/portfolio/project-09.jpg" alt="Рост" width="370" height="294" />
 						<h2 class="portfolio-title">Growing Business</h2>
 						<p class="portfolio-text">Приложение</p></a>
 					</li>
 				</ul>
-			</section>
-			</div>
-			
+				</div>
+			</section>			
 		</main>
 		<!-- Подвал -->
-		<div class="container">
 			<footer class="footer">
+				<div class="container">
 			<a href="./index.html" class="link logo">Web<span class="logo-white">Studio</span></a>
 			<address class="adress">
 				<ul class="list contact-footer" id="contacts">
@@ -109,8 +108,7 @@
 				<li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
-		</footer>
-		</div>
-		
+			</div>
+		</footer>	
 	</body>
 </html>
