--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 
-	<body class="page">
+	<body>
 		<!-- Верхняя линия -->
 		<header class="header">
-			<div class="container nav">
+			<div class="container header-container">
 				<nav class="main-nav">
-					<a href="./index.html" class="link logo">
-						Web<span class="logo-black">Studio</span>
-					</a>
+					<a href="./index.html" class="link logo">Web<span class="logo-black">Studio</span></a>
 					<ul class="list site-nav-list">
 						<li class="item"><a href="./index.html" class="active-page link">Студия</a></li>
 						<li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -45,7 +43,7 @@
 		<!-- Основная часть -->
 		<main>
 			<!-- Hero -->
-			<section class="section hero">
+			<section class="hero">
 				<div class="container">
 					<h1 class="title hero-title">
 						Эффективные решения
@@ -79,6 +77,7 @@
 					</ul>
 				</div>
 			</section>
+			
 			<!-- Чем мы занимаемся -->
 			<section class="section work">
 				<div class="container">
@@ -103,23 +102,23 @@
 					<ul class="list team-list">
 						<li class="item">
 							<img src="./images/productdesigner.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-							<h3 class="title team-title">Игорь Демьяненко</h3>
-							<p lang="en" class="team-text">Product Designer</p>
+							<div class="team-content"><h3 class="title team-title">Игорь Демьяненко</h3>
+							<p lang="en" class="team-text">Product Designer</p></div>
 						</li>
 						<li class="item">
 							<img src="images/./frontenddeveloper.jpg" alt="Ольга Репина" width="270" height="260" />
-							<h3 class="title team-title">Ольга Репина</h3>
-							<p lang="en" class="team-text">Frontend Developer</p>
+							<div class="team-content"><h3 class="title team-title">Ольга Репина</h3>
+							<p lang="en" class="team-text">Frontend Developer</p></div>
 						</li>
 						<li class="item">
 							<img src="./images/marketing.jpg" alt="Николай Тарасов" width="270" height="260" />
-							<h3 class="title team-title">Николай Тарасов</h3>
-							<p lang="en" class="team-text">Marketing</p>
+							<div class="team-content"><h3 class="title team-title">Николай Тарасов</h3>
+							<p lang="en" class="team-text">Marketing</p></div>
 						</li>
 						<li class="item">
 							<img src="./images/uidesigner.jpg" alt="Михаил Ермаков" width="270" height="260" />
-							<h3 class="title team-title">Михаил Ермаков</h3>
-							<p lang="en" class="team-text">UI Designer</p>
+							<div class="team-content"><h3 class="title team-title">Михаил Ермаков</h3>
+							<p lang="en" class="team-text">UI Designer</p></div>
 						</li>
 					</ul>
 				</div>
