--- a/portfolio.html
+++ b/portfolio.html
@@ -53,64 +53,64 @@
 						<li class="item"><button type="button" class="filter-button">Маркетинг</button></li>
 					</ul>
 					<!-- Проекты -->
-					<ul class="list portfolio-list">
-						<li class="cards">
+					<ul class="list portfolio-list cards-set">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-01.jpg" alt="Технокряк" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Технокряк</h2>
 								<p class="portfolio-text">Веб-сайт</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-02.jpg" alt="Постер" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
 								<p class="portfolio-text">Дизайн</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-03.jpg" alt="Ресторан" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Ресторан Seafood</h2>
 								<p class="portfolio-text">Приложение</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-04.jpg" alt="Прайм" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Проект Prime</h2>
 								<p class="portfolio-text">Маркетинг</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-05.jpg" alt="Боксы" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Проект Boxes</h2>
 								<p class="portfolio-text">Приложение</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-06.jpg" alt="Нет границ" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Inspiration has no Borders</h2>
 								<p class="portfolio-text">Веб-сайт</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-07.jpg" alt="Лимитед" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Издание Limited Edition</h2>
 								<p class="portfolio-text">Дизайн</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-08.jpg" alt="Лаб" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Проект LAB</h2>
 								<p class="portfolio-text">Маркетинг</p></div>
 							</a>
 						</li>
-						<li class="cards">
+						<li class="cards-item">
 							<a href="" class="link">
 								<img src="./images/portfolio/project-09.jpg" alt="Рост" width="370" height="294" />
 								<div class="cards-content"><h2 class="portfolio-title">Growing Business</h2>
@@ -125,12 +125,11 @@
 		<footer class="footer">
 			<div class="container">
 				<a href="./index.html" class="link logo">
-					Web
-					<span class="logo-white">Studio</span>
+					Web<span class="logo-white">Studio</span>
 				</a>
 				<address class="adress">
 					<ul class="list contact-footer" id="contacts">
-						<li>
+						<li class="contacts-item">
 							<a
 								href="https://goo.gl/maps/dRKmTDUVRfcgMVfe7"
 								class="link street"
@@ -140,8 +139,8 @@
 								г. Киев, пр-т Леси Украинки, 26
 							</a>
 						</li>
-						<li><a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a></li>
-						<li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
+						<li class="contacts-item"><a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a></li>
+						<li class="contacts-item"><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
 					</ul>
 				</address>
 			</div>
