--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
 			<section class="section benefits">
 				<div class="container">
 					<h2 class="hidden-title">Наши преимущества</h2>
-					<ul class="list benefits-list">
-						<li class="item">
+					<ul class="list benefits-list cards-set">
+						<li class="cards-item">
 							<h3 class="title benefits-title">Внимание к деталям</h3>
 							<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<h3 class="title benefits-title">Пунктуальность</h3>
 							<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<h3 class="title benefits-title">Планирование</h3>
 							<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<h3 class="title benefits-title">Современные технологии</h3>
 							<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 						</li>
@@ -82,14 +82,14 @@
 			<section class="section work">
 				<div class="container">
 					<h2 class="title section-title">Чем мы занимаемся</h2>
-					<ul class="list work-list">
-						<li class="item">
+					<ul class="list work-list cards-set">
+						<li class="cards-item">
 							<img src="./images/programer.jpg" alt="Создание сайтов" width="370" height="294" />
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<img src="./images/designer.jpg" alt="Дизайн сайтов" width="370" height="294" />
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<img src="./images/creative.jpg" alt="Улучшение сайтов" width="370" height="294" />
 						</li>
 					</ul>
@@ -99,23 +99,23 @@
 			<section class="section team">
 				<div class="container">
 					<h2 class="title section-title">Наша команда</h2>
-					<ul class="list team-list">
-						<li class="item">
+					<ul class="list team-list cards-set">
+						<li class="cards-item">
 							<img src="./images/productdesigner.jpg" alt="Игорь Демьяненко" width="270" height="260" />
 							<div class="team-content"><h3 class="title team-title">Игорь Демьяненко</h3>
 							<p lang="en" class="team-text">Product Designer</p></div>
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<img src="images/./frontenddeveloper.jpg" alt="Ольга Репина" width="270" height="260" />
 							<div class="team-content"><h3 class="title team-title">Ольга Репина</h3>
 							<p lang="en" class="team-text">Frontend Developer</p></div>
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<img src="./images/marketing.jpg" alt="Николай Тарасов" width="270" height="260" />
 							<div class="team-content"><h3 class="title team-title">Николай Тарасов</h3>
 							<p lang="en" class="team-text">Marketing</p></div>
 						</li>
-						<li class="item">
+						<li class="cards-item">
 							<img src="./images/uidesigner.jpg" alt="Михаил Ермаков" width="270" height="260" />
 							<div class="team-content"><h3 class="title team-title">Михаил Ермаков</h3>
 							<p lang="en" class="team-text">UI Designer</p></div>
@@ -132,7 +132,7 @@
 				</a>
 				<address class="adress">
 					<ul class="list contact-footer" id="contacts">
-						<li>
+						<li class="contacts-item">
 							<a
 								href="https://goo.gl/maps/dRKmTDUVRfcgMVfe7"
 								class="link street"
@@ -142,8 +142,8 @@
 								г. Киев, пр-т Леси Украинки, 26
 							</a>
 						</li>
-						<li><a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a></li>
-						<li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
+						<li class="contacts-item"><a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a></li>
+						<li class="contacts-item"><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
 					</ul>
 				</address>
 			</div>
