--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
 		<!--<link rel="stylesheet" href="./css/modern-normalize.css" />-->
 		<link
 			rel="stylesheet"
@@ -23,6 +22,7 @@
 	</head>
 
 	<body>
+
 		<!-- Верхняя линия -->
 		<header class="header">
 			<div class="container header-container">
@@ -40,6 +40,7 @@
 				</ul>
 			</div>
 		</header>
+
 		<!-- Основная часть -->
 		<main>
 			<!-- Hero -->
@@ -53,6 +54,7 @@
 					<button type="button" class="btn">Заказать услугу</button>
 				</div>
 			</section>
+
 			<!-- Наши преимущества -->
 			<section class="section benefits">
 				<div class="container">
@@ -95,6 +97,7 @@
 					</ul>
 				</div>
 			</section>
+
 			<!-- Наша команда -->
 			<section class="section team">
 				<div class="container">
@@ -124,6 +127,7 @@
 				</div>
 			</section>
 		</main>
+
 		<!-- Подвал -->
 		<footer class="footer">
 			<div class="container">
