--- a/portfolio.html
+++ b/portfolio.html
@@ -9,16 +9,14 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
 		<!--<link rel="stylesheet" href="./css/modern-normalize.css" />-->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 			integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
 			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
+			referrerpolicy="no-referrer"/>
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
@@ -39,11 +37,13 @@
 				</ul>
 			</div>
 		</header>
+
 		<!-- Портфолио -->
 		<main>
 			<section class="section portfolio">
 				<div class="container">
 					<h1 class="hidden-title">Портфолио</h1>
+
 					<!-- Фильтры -->
 					<ul class="list btn-list">
 						<li class="item"><button type="button" class="filter-button">Все</button></li>
@@ -52,6 +52,7 @@
 						<li class="item"><button type="button" class="filter-button">Дизайн</button></li>
 						<li class="item"><button type="button" class="filter-button">Маркетинг</button></li>
 					</ul>
+
 					<!-- Проекты -->
 					<ul class="list portfolio-list cards-set">
 						<li class="cards-item">
@@ -121,6 +122,7 @@
 				</div>
 			</section>
 		</main>
+
 		<!-- Подвал -->
 		<footer class="footer">
 			<div class="container">
